--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "heroku-postbuild": "ng build --prod",
-    "start:heroku": "node /dist/fresh-angular/server/main.js"
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
