--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~12.0.5",
     "@angular/platform-browser-dynamic": "~12.0.5",
     "@angular/router": "~12.0.5",
+    "@types/canvas-confetti": "^1.3.0",
+    "canvas-confetti": "^1.3.3",
     "express": "^4.17.1",
+    "ng-particles": "^2.13.4",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
